welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:4: error: illegal start of simple pattern
  var  int temp = a;
                ^max1020:4: error: '=' expected but ';' found.
  var  int temp = a;
                   ^